<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="app_name">Snake</string>
    <string name="start_game">New Game</string>
    <string name="high_score">Top Score</string>
    <string name="close_game">Exit Game</string>
    <string name="game_name">Snake</string>
    <string name="PlayerName">Player Name</string>
    <string name="score">Score</string>

    <string name="enter_name">Enter Name</string>
</resources>